--- a/test-network/organizations/cryptogen/crypto-config-orderer.yaml
+++ b/test-network/organizations/cryptogen/crypto-config-orderer.yaml
@@ -20,3 +20,12 @@ OrdererOrgs:
       - Hostname: orderer
         SANS:
           - localhost
+          - "127.0.0.1"
+      - Hostname: orderer2
+        SANS:
+          - localhost
+          - "127.0.0.1"
+      - Hostname: orderer3
+        SANS:
+          - localhost
+          - "127.0.0.1"
